--- a/package.json
+++ b/package.json
@@ -39,13 +39,20 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.1",
+    "@chakra-ui/react": "^1.7.3",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "clsx": "^1.1.1",
     "dotenv": "^10.0.0",
     "focus-visible": "^5.2.0",
+    "framer-motion": "^4",
     "isomorphic-unfetch": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "luxon": "^2.2.0",
     "mongodb": "^4.0.0",
     "mongoose": "^5.13.2",
     "next": "^11.0.1",
@@ -53,7 +60,9 @@
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@bitwarden/cli": "^1.17.1",
