--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "framer-motion": "^4",
     "isomorphic-unfetch": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
+    "leaflet": "^1.7.1",
+    "leaflet-geosearch": "^3.6.0",
     "lodash": "^4.17.21",
     "luxon": "^2.2.0",
     "mongodb": "^4.0.0",
@@ -63,6 +65,7 @@
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
     "react-icons": "^4.3.1",
+    "react-leaflet": "^3.2.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
