--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "clsx": "^1.1.1",
+    "date-fns": "^2.28.0",
     "dotenv": "^10.0.0",
     "focus-visible": "^5.2.0",
     "framer-motion": "^4",
