--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-hot-toast": "^2.1.1",
     "react-icons": "^4.3.1",
     "react-leaflet": "^3.2.2",
