--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@emotion/styled": "^11",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.27.1",
     "clsx": "^1.1.1",
     "date-fns": "^2.28.0",
     "dotenv": "^10.0.0",
@@ -59,6 +60,7 @@
     "mapbox-gl": "^2.6.1",
     "mongodb": "^4.0.0",
     "mongoose": "^5.13.2",
+    "multer": "^1.4.4",
     "next": "^11.0.1",
     "next-images": "^1.8.1",
     "normalize.css": "^8.0.1",
