--- a/package.json
+++ b/package.json
@@ -15,28 +15,7 @@
   "scripts": {
     "dev": "next -p 3000",
     "build": "next build",
-    "start": "next build && next start",
-    "lint": "eslint \"**/*.{js,jsx}\"",
-    "lint:fix": "eslint \"**/*.{js,jsx}\" --fix",
-    "format": "prettier \"**/*.{js,jsx}\" --write",
-    "format:check": "prettier \"**/*.{js,jsx}\" -l",
-    "secrets": "npm run secrets:logout && cross-env-shell BW_SESSION=`bw login product@bitsofgood.org --raw` \"npm run secrets:sync\"",
-    "secrets:logout": "(bw logout || exit 0)",
-    "secrets:login": "bw login product@bitsofgood.org",
-    "secrets:sync": "bw sync && bw get item [ID_OR_NAME_FROM_STEP_2] | fx .notes > \".env\""
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,jsx}": [
-      "eslint"
-    ],
-    "*.{js,jsx,css}": [
-      "prettier --write"
-    ]
+    "start": "next build && next start"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
